	added permissions to all open() with O_CREAT calls
	added --with-fortify configure option
	fixed a segfault on ctrl-D in sqlrsh
	fixed uncoordinated access to shared debugstr among listener threads
		by using local instances instead
	added ping-loop to router connection module's logIn() method to manage
		cases where routed-to instances are started after the router

1.0.0 - updated md5 pwdenc to use rudiments md5 class
	solved a long-standing hang that could occur if the database password
		expired while sqlrelay was running, and the sqlr-scaler
		attempted to start new connections
	added convertcase, convertcasedoublequotes, and removedoublequotes
		parameters to normalize translation module
	added ColumnCaseName parameter to ODBC driver
	fixed a subtle bug in the ODBC driver that caused the first row to be
		skipped if columns were not bound
	added -backtrace option for debugging
	fixed mysql connection module so it can use the statement API on
		Windows
	fixed semaphore reference-before-init bug in sqlrservercontroller
	added support for db, debug, columnnamecase, dontgetcolumninfo,
		nullsasnulls, and lazyconnect connect-string options to all
		drivers (though in some they are camel-case and others
		lower-case)
	in DB-abstraction-layer drivers, the debug, dontgetcolumninfo,
		nullsasnulls, lazyconnect, krb, and tls connect-string options
		now support any yes/no equivalent such as yes, Yes, y, Y, true,
		True, 1, (and similar for no)
	fixed a regression that could cause crashes in the C#/ADO driver
		when binding null or date values
	added all parameters to ODBC config screen
	removed calls to mysql_stmt_store_result/mysql_stmt_num_rows from
		mysql connection to improve performance.  mysql connection
		doesn't know the total number of rows prior to full fetch
		now (which is consistent with most other databases).
	updated postgresql connection to use an unnamed cursor instead of
		naming it and having to deallocate it over an over