@@ -436,12 +436,6 @@ install: $(INSTALLLIB)
 	$(CHMOD) 644 $(includedir)/sqlrelay/private/sqlruserpasswordcredentials.h
 	$(MKINSTALLDIRS) $(tmpdir)
 	$(CHMOD) 777 $(tmpdir)
-	$(MKINSTALLDIRS) $(tmpdir)/sockets
-	$(CHMOD) 777 $(tmpdir)/sockets
-	$(MKINSTALLDIRS) $(tmpdir)/pids
-	$(CHMOD) 777 $(tmpdir)/pids
-	$(MKINSTALLDIRS) $(tmpdir)/ipc
-	$(CHMOD) 777 $(tmpdir)/ipc
 	$(MKINSTALLDIRS) $(logdir)
 	$(CHMOD) 777 $(logdir)
 	$(MKINSTALLDIRS) $(debugdir)
@@ -514,9 +508,11 @@ uninstall: $(UNINSTALLLIB)
 		$(bindir)/sqlr-pwdenc$(EXE) \
 		$(bindir)/sqlr-status$(EXE)
 	$(RMTREE) $(tmpdir) \
-		$(prefix)/lib/sqlrelay/tmp \
 		$(logdir) \
-		$(debugdir)
+		$(debugdir) \
+		$(prefix)/lib/sqlrelay/tmp \
+		$(localstatedir)/$(SQLRELAY) \
+		$(localstatedir)/sqlrelay
 
 uninstalldll:
 	$(RM) $(bindir)/lib$(SQLR)server.$(LIBEXT) \
